[package]
name = "iota-identity-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
identity_iota = { default-features = false, features = ["resolver"] }
tokio = { version = "1.29",  features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.62"

[examples]
test_1 = "examples/test_1.rs"
